--- a/app/views/activejob/web/layouts/application.html.erb
+++ b/app/views/activejob/web/layouts/application.html.erb
@@ -14,7 +14,6 @@
               font-family: monospace;
               background-color: #000;
               color: #fff;
-              white-space: pre-wrap;
               font-size: 10px;
               border-radius: 10px;
           }
@@ -23,6 +22,11 @@
               font-size: 14px;
           }
 
+          .line-number {
+              color: #999;
+              padding-right: 10px;
+              display: inline-block;
+          }
       }
   </style>
 </head>
