--- a/app/views/activejob/web/job_executions/show.html.erb
+++ b/app/views/activejob/web/job_executions/show.html.erb
@@ -118,7 +118,7 @@
         <div class="mb-3 row">
           <div class="col-sm-3"><strong class="text-dark">Arguments:</strong></div>
           <div class="col-sm-9">
-            <% if @job_execution.arguments.present? %>
+            <% if @job_execution.arguments.present? || @job_execution.input_file.attached? %>
               <div class="card">
                 <div class="card-body">
                   <div class="table-responsive">
@@ -140,15 +140,17 @@
                           </td>
                         </tr>
                       <% end %>
-                      <% @job_execution.arguments.each do |argument| %>
-                        <tr>
-                          <td>
-                            <p class="font-14 my-1 fw-normal"><%= argument.first.split('_').map(&:capitalize).join(' ') %></p>
-                          </td>
-                          <td>
-                            <p class="font-14 my-1 fw-normal"><%= argument.second.presence || '-' %></p>
-                          </td>
-                        </tr>
+                      <% if @job_execution.arguments.present? %>
+                        <% @job_execution.arguments.each do |argument| %>
+                          <tr>
+                            <td>
+                              <p class="font-14 my-1 fw-normal"><%= argument.first.split('_').map(&:capitalize).join(' ') %></p>
+                            </td>
+                            <td>
+                              <p class="font-14 my-1 fw-normal"><%= argument.second.presence || '-' %></p>
+                            </td>
+                          </tr>
+                        <% end %>
                       <% end %>
                       </tbody>
                     </table>
