--- a/app/views/activejob/web/jobs/show.html.erb
+++ b/app/views/activejob/web/jobs/show.html.erb
@@ -50,7 +50,7 @@
           <div class="col-sm-3"><strong class="text-dark">Template:</strong></div>
           <div class="col-sm-9">
             <% if @job.template_file.attached? %>
-              <%= link_to "Download PDF", rails_blob_path(@job.template_file, disposition: "attachment"), class: "btn btn-primary" %>
+              <%= link_to "Download", rails_blob_path(@job.template_file, disposition: "attachment"), class: "btn btn-sm btn-primary" %>
             <% else %>
               <p>No template available</p>
             <% end %>
