--- a/app/views/activejob/web/layouts/application.html.erb
+++ b/app/views/activejob/web/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <%= csrf_meta_tags %>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Activejob Web</title>
@@ -37,5 +38,10 @@
   <%= yield %>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@rails/ujs@7.1.3.2/dist/rails-ujs.min.js"></script>
+<script>
+    Rails.start();
+</script>
+<%= javascript_include_tag "activestorage" %>
 </body>
 </html>
