updated-issue-fix-changes

--- a/app/views/activejob/web/jobs/new.html.erb
+++ b/app/views/activejob/web/jobs/new.html.erb
@@ -73,7 +73,7 @@
     </div>
     <div class="col-sm-10 d-flex align-items-center">
       <input type="text" id="executor-search" class="form-control me-2" placeholder="Enter Executor email" , style="width: 595px;"/>
-      <button type="button" id="search-approver" class="btn btn-sm btn-primary">Search</button>
+      <button type="button" id="search-executor" class="btn btn-sm btn-primary">Search</button>
     </div>
   </div>
 
